fixed alignment

--- a/unit-4-game-2/assets/css/style.css
+++ b/unit-4-game-2/assets/css/style.css
@@ -5,7 +5,8 @@ body {
 
 .card {
     margin: 10px;
-    width: 200px;
+    width: 150px;
+    height: 210px;
     float: left;
 }
 
